kube/test/webapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  namespace: test
  labels:
    app: webapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        image: horekk/webapp:v0.8
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: 500m
            memory: 512Mi
          requests:
            cpu: 200m
---

apiVersion: v1
kind: Service
metadata:
  name: webapp
  namespace: test
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
  - port: 3000

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp
  namespace: test
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          service:
            name: webapp
            port:
              number: 3000
        pathType: Exact
